tests/conformance/negative/23-contract-unknown-reference.sml
<!-- Error: contract references must resolve -->
<skill define="contract" name="unknown-reference">
  <field name="tracker" type="contract:missing-tracker" />
</skill>
